@@ -319,8 +319,6 @@ HelpPage::OnCommand(struct mpdclient &c, Command cmd)
 
 	lw.SetCursorFromOrigin(0);
 	if (screen_find(screen, lw, cmd, *this)) {
-		/* center the row */
-		lw.Center(lw.GetCursorIndex());
 		SetDirty();
 		return true;
 	}
