@@ -90,8 +90,6 @@ TextPage::OnCommand(struct mpdclient &c, Command cmd)
 
 	lw.SetCursorFromOrigin(0);
 	if (screen_find(screen, lw, cmd, *this)) {
-		/* center the row */
-		lw.Center(lw.GetCursorIndex());
 		SetDirty();
 		return true;
 	}
